# gif2numpy

./: .gitignore  README.md  gif2numpy.py  pyproject.toml  setup.py  test_gif2numpy.py
