[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "opencv-python>=4.6.0.66",
]

[project]
name = "gif2numpy"
version = "0.1.4"
description = ""
authors = [
    {name = "Andreas Bunkahle", email = "abunkahle@t-online.de"},
]
dependencies = [
    "numpy>=1.23.5",
    "kaitaistruct>=0.10",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
